Correcao dos grupos e do carregamento de subgrupos

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1237,12 +1237,9 @@
             "Vidro"
         ],
         "Despesa": [
-            "Compras de Materiais",
-            "Despesas Administrativas",
-            "Outras Despesas",
+            "Despesas de operação",
+            "Despesas de manutenção",
             "Rateio dos Associados",
-            "Serviços Contratados",
-            "Pagamento de Fornecedores"
         ]
     };
 
