Atualizacao dos nomes dos grupos fixos

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -2912,12 +2912,11 @@ $('#detalheData').text(data.data || data.data_documento || "--/--/----");
             "Vidro"
         ],
         "Despesa": [
-            "Compras de Materiais",
-            "Despesas Administrativas",
-            "Outras Despesas",
-            "Rateio dos Associados",
-            "Serviços Contratados",
-            "Pagamento de Fornecedores"
+            "Despesas de operação",
+            "Despesas de manutenção",
+            "Rateio dos Associados"
+      
+          
         ]
     };
 
